--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
 
 //    Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // Parceler
+ implementation 'org.parceler:parceler-api:1.1.12'
+ annotationProcessor 'org.parceler:parceler:1.1.12'
 }
